Fix T37673: Ray casting could fail with 0 collision margins

Use bullet's old method of doing ray casts to stay compatible with old
files. It's faster but a bit less accurate.